Render up and running!
Connected to Render
Our backend server is live on: https://netflixbackend-z1k7.onrender.com/

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "format": "prettier --write .",
-     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
