--- a/.github/workflows/prettier.yaml
+++ b/.github/workflows/prettier.yaml
@@ -1,48 +1,21 @@
-name: Prettier Format Check!
-
+name: Format
 on:
   pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
-
+    branches: [main]
 jobs:
-  prettier:
+  format:
     runs-on: ubuntu-latest
-
-    permissions: 
-      contents: write
-      pull-requests: write
-      workflows: write  # Lägg till detta för att ge GitHub Actions rätt att uppdatera workflows
-
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Hämtar hela git-historiken för att möjliggöra pushes
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+          ref: ${{ github.head_ref }}
+      - uses: actions/setup-node@v2
         with:
-          node-version: '18'  # Använd den Node.js-version du har i projektet
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run Prettier to format code
-        run: npm run format
-
+          node-version: "14.x"
+      - run: npm ci
+      - run: npm run format
       - name: Commit changes
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add .
-          git commit -m "Auto-formatted code with Prettier" || echo "No changes to commit"
-
-      - name: Push changes back to the repository
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: git push origin HEAD:${{ github.event.pull_request.head.ref }}
-
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Apply formatting changes
+          branch: ${{ github.head_ref }}
