--- a/.github/workflows/prettier.yaml
+++ b/.github/workflows/prettier.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14.x"
-      - run: npm ci
+      - run: npm i
       - run: npm run format
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
