--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "eslint": "^9.10.0",
