--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "firebase": "^10.13.2",
     "firebase-admin": "^12.5.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0"
